--- a/index.html
+++ b/index.html
@@ -71,6 +71,12 @@
       font-size: 40px;
       margin-bottom: 20px;
     }
+
+    .w-button {
+      margin-top: 20px;
+      font-size: 20px;
+      background-color: #ff6347; /* Tomato color */
+    }
   </style>
 </head>
 <body>
@@ -79,6 +85,9 @@
     <input type="text" placeholder="Search..." id="searchBar">
     <button onclick="search()">Search</button>
   </div>
+
+  <!-- Button that opens the Wavell SHS website -->
+  <button class="w-button" onclick="openWavellWebsite()">W</button>
 
   <script>
     function search() {
@@ -89,6 +98,11 @@
       } else {
         alert("Please enter something to search!");
       }
+    }
+
+    function openWavellWebsite() {
+      // Opens the Wavell SHS website in a new tab
+      window.open('https://connect.wavellshs.eq.edu.au/', '_blank');
     }
   </script>
 </body>
