--- a/index.html
+++ b/index.html
@@ -11,64 +11,86 @@
       padding: 0;
       background-color: black; /* Black background */
       color: white;
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       height: 100vh;
       text-align: center;
+      overflow: hidden;
+    }
+
+    /* Hello Message */
+    h1 {
+      color: #00bfff; /* Bright blue color for the greeting */
+      font-size: 48px;
+      margin-bottom: 30px;
+      text-shadow: 2px 2px 10px rgba(0, 191, 255, 0.8); /* Glow effect */
     }
 
     /* Search Bar Styles */
     .search-container {
       display: flex;
       align-items: center;
+      margin-bottom: 30px;
     }
 
     input[type="text"] {
       padding: 10px;
-      font-size: 16px;
+      font-size: 18px;
       border: none;
       outline: none;
-      border-radius: 5px;
-      margin-right: 10px;
+      border-radius: 25px;
+      margin-right: 15px;
+      width: 250px;
+    }
+
+    input[type="text"]:focus {
+      box-shadow: 0 0 8px 2px rgba(0, 191, 255, 0.8);
     }
 
     button {
-      padding: 10px 15px;
+      padding: 12px 20px;
       font-size: 18px;
-      background-color: #444;
+      background-color: #00bfff; /* Cool blue button */
       color: white;
       border: none;
-      border-radius: 50%;
+      border-radius: 50px;
       cursor: pointer;
+      transition: background-color 0.3s, transform 0.3s;
     }
 
     button:hover {
-      background-color: #666;
+      background-color: #0080ff; /* Darker blue on hover */
+      transform: scale(1.1); /* Button grows slightly on hover */
     }
 
-    /* Button Styles */
+    /* W Button Styles */
     .w-button {
       position: absolute;
       top: 20px;
       left: 20px;
-      font-size: 20px;
+      font-size: 25px;
       padding: 15px;
-      background-color: #444;
+      background-color: #00bfff;
       color: white;
       border: none;
       border-radius: 50%;
       cursor: pointer;
+      transition: background-color 0.3s, transform 0.3s;
     }
 
     .w-button:hover {
-      background-color: #666;
+      background-color: #0080ff;
+      transform: scale(1.2); /* W button grows slightly */
     }
   </style>
 </head>
 <body>
+
+  <!-- Hello Message -->
+  <h1>Hello!</h1>
 
   <!-- W Button to open the link -->
   <button class="w-button" onclick="window.open('https://connect.wavellshs.eq.edu.au/', '_blank')">W</button>
@@ -91,4 +113,3 @@
 
 </body>
 </html>
-
