--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 
       <!-- Story Button -->
       <button class="story-button" onclick="toggleStory()">Story</button>
+
+      <!-- Personal Button -->
+      <button class="personal-button" onclick="window.location.href='signup.html'">Personal</button>
     </div>
 
     <!-- Right Side (Story) -->
@@ -74,4 +77,3 @@
 
 </body>
 </html>
-
