--- a/signup.html
+++ b/signup.html
@@ -1,14 +1,31 @@
+<!-- signup.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Account</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css"> <!-- Link to your CSS -->
+    <script>
+      function submitForm(event) {
+        event.preventDefault(); // Prevent default form submission
+
+        // Get the user's name and email from the form
+        const username = document.getElementById("username").value;
+        const email = document.getElementById("email").value;
+
+        // Save the first letter of the username and email in localStorage
+        localStorage.setItem("username", username);
+        localStorage.setItem("email", email);
+
+        // Redirect to home page
+        window.location.href = "index.html";
+      }
+    </script>
 </head>
 <body>
     <h1>Create Your Account</h1>
-    <form action="/submit-form" method="POST">
+    <form onsubmit="submitForm(event)">
         <label for="username">Username</label>
         <input type="text" id="username" name="username" required><br><br>
 
