--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                 <button onclick="searchGoogle()">Search</button>
             </div>
 
-            <!-- Personal Button -->
-            <button class="personal-button" onclick="window.location.href='signup.html'">Personal</button>
+            <!-- Story Button (Always Visible) -->
+            <button class="story-button" onclick="toggleStory()">Story</button>
         </div>
 
         <div class="right-section" id="story-box">
@@ -97,6 +97,16 @@
         const query = document.getElementById('search-input').value;
         if (query) {
           window.open('https://www.google.com/search?q=' + encodeURIComponent(query), '_blank');
+        }
+      }
+
+      // Function to toggle the story on the right side
+      function toggleStory() {
+        const storyBox = document.getElementById("story-box");
+        if (storyBox.style.display === "none" || storyBox.style.display === "") {
+          storyBox.style.display = "block"; // Show story
+        } else {
+          storyBox.style.display = "none"; // Hide story
         }
       }
 
