--- a/index.html
+++ b/index.html
@@ -29,6 +29,24 @@
         transform: scale(1.2);
       }
 
+      /* Username Tooltip */
+      .user-info .username {
+        display: none;
+        position: absolute;
+        top: 0;
+        left: -120px;  /* Position the username to the left */
+        background-color: rgba(0, 0, 0, 0.7);
+        color: white;
+        padding: 5px;
+        border-radius: 5px;
+        font-size: 16px;
+        white-space: nowrap;
+      }
+
+      .user-info:hover .username {
+        display: block;
+      }
+
       .user-email {
         display: none;
         position: absolute;
@@ -42,6 +60,25 @@
 
       .user-info:hover .user-email {
         display: block;
+      }
+
+      /* Personal Button */
+      .personal-button {
+        margin-top: 20px;
+        padding: 12px 25px;
+        font-size: 20px;
+        background-color: #4CAF50; /* Green background */
+        color: white;
+        border: none;
+        border-radius: 50px;
+        cursor: pointer;
+        transition: background-color 0.3s ease, transform 0.3s ease;
+        font-weight: bold;
+      }
+
+      .personal-button:hover {
+        background-color: #45a049; /* Darker green when hovered */
+        transform: scale(1.1); /* Slightly bigger on hover */
       }
     </style>
 </head>
@@ -59,6 +96,9 @@
                 <input type="text" id="search-input" placeholder="Search...">
                 <button onclick="searchGoogle()">Search</button>
             </div>
+
+            <!-- Personal Button (Visible only when not signed in) -->
+            <button class="personal-button" id="personal-button" onclick="showPersonalPage()">Personal</button>
 
             <!-- Story Button (Always Visible) -->
             <button class="story-button" onclick="toggleStory()">Story</button>
@@ -88,7 +128,8 @@
     <!-- Display User Info in the Corner -->
     <div class="user-info" id="user-info">
         <span id="user-initial"></span>
-        <div class="user-email" id="user-email"></div>
+        <div class="username" id="user-username"></div> <!-- Username on Hover -->
+        <div class="user-email" id="user-email"></div> <!-- Email on Hover -->
     </div>
 
     <script>
@@ -117,7 +158,33 @@
       if (username && email) {
         const firstLetter = username.charAt(0).toUpperCase(); // Get the first letter of username
         document.getElementById("user-initial").textContent = firstLetter;
+        document.getElementById("user-username").textContent = username;
         document.getElementById("user-email").textContent = email;
+
+        // Hide Personal button after user is logged in
+        document.getElementById("personal-button").style.display = "none";
+      }
+
+      // Function to simulate sign-in and set user data
+      function showPersonalPage() {
+        // Simulate user input for the example
+        const usernameInput = prompt("Enter your username:");
+        const emailInput = prompt("Enter your email:");
+
+        if (usernameInput && emailInput) {
+          // Save the user data to localStorage
+          localStorage.setItem("username", usernameInput);
+          localStorage.setItem("email", emailInput);
+
+          // Hide the Personal button
+          document.getElementById("personal-button").style.display = "none";
+
+          // Update the display with the user info
+          const firstLetter = usernameInput.charAt(0).toUpperCase();
+          document.getElementById("user-initial").textContent = firstLetter;
+          document.getElementById("user-username").textContent = usernameInput;
+          document.getElementById("user-email").textContent = emailInput;
+        }
       }
     </script>
 
